Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-452

b1_8 __ksymtab_obd_device_(free|alloc) causes a section mismatch

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 1.8.7
    • Lustre 1.8.6
    • SLES11SP1 for ia64
      gcc (SUSE Linux) 4.3.4 [gcc-4_3-branch revision 152973]
      Lustre 1.8.5
    • 3
    • 6596

      This is fixed in master (LU-102) but appears to be present in b1_8.

      Building vanilla 1.8.5-

      /usr/src/packages/BUILD/lustre-1.8.5/lustre/obdclass/genops.c:96: error: __ksymtab_obd_device_free causes a section type conflict
      /usr/src/packages/BUILD/lustre-1.8.5/lustre/obdclass/genops.c:81: error: __ksymtab_obd_device_alloc causes a section type conflict

      As with ppc, recent releases of GCC for ia64 are refusing to export static functions.
      With no external references, these do not need to be exported.

      Patch on the way.

            rread Robert Read
            schamp Stephen Champion
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: