LU-452 : Don't export static functions

As with LU-102 in the master branch, recent versions of GCC on ia64
sensibly refuse to export static functions.  obd_device_alloc and
obd_device_free are not referenced externally, so resolve this error
by not exporting them.

Signed-off-by: Stephen Champion <schamp@sgi.com>
Change-Id: I784cfbe59f4685d0e975427c3095aa082de1a1c6
Reviewed-on: http://review.whamcloud.com/1007
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Tested-by: Hudson